--- a/.github/workflows/buildAndTest.yaml
+++ b/.github/workflows/buildAndTest.yaml
@@ -1,3 +1,5 @@
+# Unit test check
+---
 name: Unit Tests
 
 on: push
@@ -8,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [23.x, 22.x, 208.x, 18.x]
+        node-version: [23.x, 22.x, 20.x, 18.x]
 
     steps:
       - name: Checkout of code from repo
