--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "test:coverage": "jest --coverages"
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
